--- a/UIAComWrapper/UIAComWrapper.csproj
+++ b/UIAComWrapper/UIAComWrapper.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UIAComWrapper</RootNamespace>
     <AssemblyName>UIAComWrapper</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -41,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,6 +50,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
@@ -57,10 +59,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnnotationPattern.cs" />
@@ -83,14 +82,9 @@
     <Compile Include="InternalTypes.cs" />
     <Compile Include="InvokePattern.cs" />
     <Compile Include="AutomationInteropProvider.cs" />
-    <Compile Include="Key.cs" />
-    <Compile Include="KeyInterop.cs" />
     <Compile Include="LegacyIAccessiblePattern.cs" />
     <Compile Include="ObjectModelPattern.cs" />
-    <Compile Include="Point.cs" />
     <Compile Include="ProviderInterfaces.cs" />
-    <Compile Include="Rect.cs" />
-    <Compile Include="Size.cs" />
     <Compile Include="SpreadsheetPattern.cs" />
     <Compile Include="StylesPattern.cs" />
     <Compile Include="SynchronizedInput.cs" />
