added textedittextchanged event

--- a/UIAComWrapper/UIAComWrapper.csproj
+++ b/UIAComWrapper/UIAComWrapper.csproj
@@ -55,6 +55,10 @@
   <ItemGroup>
     <Reference Include="Accessibility" />
     <Reference Include="Interop.UIAutomationClient, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>Lib\Interop.UIAutomationClient.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -117,6 +121,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Lib\Interop.UIAutomationClient.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TobiiSoftware.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
